# RustNodeManager

./: .gitignore  CLAUDE.md  Cargo.toml  architecture.md  demo.ps1  demo_output.txt  readme.md
config/: default.yaml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/node-manager-core/: Cargo.toml
crates/node-manager-core/src/: config.rs  error.rs  lib.rs
crates/node-manager-core/src/engine/: heartbeat_processor.rs  mod.rs  role_assignment.rs
crates/node-manager-core/src/model/: cluster.rs  mod.rs  node.rs  node_manager_state.rs
crates/node-manager-core/src/monitor/: heartbeat_monitor.rs  mod.rs
crates/node-manager-core/src/storage/: in_memory.rs  json_file.rs  mod.rs  trait_.rs
crates/node-manager-server/: Cargo.toml
crates/node-manager-server/src/: conversion.rs  lib.rs  main.rs  server.rs  service.rs
crates/node-manager-server/tests/: e2e.rs  integration.rs
crates/proto-gen/: Cargo.toml  build.rs
crates/proto-gen/src/: lib.rs
proto/: node_manager.proto
