[workspace]
resolver = "2"
members = [
    "crates/proto-gen",
    "crates/node-manager-core",
    "crates/node-manager-server",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# gRPC
tonic = "0.14"
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-build = "0.14"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal", "fs", "process", "io-util"] }
tokio-util = "0.7"
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = { version = "0.15", features = ["yaml"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }

# Internal crates
proto-gen = { path = "crates/proto-gen" }
node-manager-core = { path = "crates/node-manager-core" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
