[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
proto-gen = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "nm-cli"
path = "src/main.rs"
